--- a/codebook/codebook.tex
+++ b/codebook/codebook.tex
@@ -175,6 +175,15 @@ stringstyle=\itshape\color{Green4},
 \subsection{Li Chao Tree}
 \lstinputlisting{data_structure/lichao.cpp}
 
+\subsection{Block Tree}
+\lstinputlisting{data_structure/block_tree.cpp}
+
+\subsection{Dancing Link}
+\lstinputlisting{data_structure/DancingLinkX.cpp}
+
+\subsection{Range Modify and Query BIT}
+\lstinputlisting{adhoc/2d_bit.cpp}
+
 \section{Flow}
 \subsection{ISAP with bound}
 \lstinputlisting{flow/ISAP_bounded.cpp}
@@ -277,6 +286,12 @@ stringstyle=\itshape\color{Green4},
 \subsection{Simplex Algorithm}
 \lstinputlisting{math/simplex.cpp}
 
+\subsection{Middle Speed Linear Recursion}
+\lstinputlisting{math/mid_speed_linear_recursion.cpp}
+
+\subsection{Chinese Remainder Theorem}
+\lstinputlisting{math/chinese_remainder.cpp}
+
 \section{Convolution}
 
 \subsection{FFT}
@@ -298,8 +313,14 @@ stringstyle=\itshape\color{Green4},
 
 \section{String}
 
-\subsection{String Tools}
-\lstinputlisting{string/string_tool.cpp}
+\subsection{KMP}
+\lstinputlisting{string/kmp.cpp}
+
+\subsection{Z value}
+\lstinputlisting{string/z_value.cpp}
+
+\subsection{Longest Palindrome}
+\lstinputlisting{string/longest_palindrome.cpp}
 
 \subsection{Aho–Corasick Algorithm}
 \lstinputlisting{string/AC_Automata.cpp}
@@ -326,8 +347,8 @@ stringstyle=\itshape\color{Green4},
 \subsection{Convex Hull 3D}
 \lstinputlisting{geometry/ConvexHull3D.cpp}
 
-\subsection{Convex Hull}
-\lstinputlisting{geometry/ConvexHull.cpp}
+\subsection{Dynamic convexhull}
+\lstinputlisting{geometry/dynamic_convexhull.cpp}
 
 \subsection{Polar Angle Sort}
 \lstinputlisting{geometry/polar_angle_sort.cpp}
@@ -335,64 +356,49 @@ stringstyle=\itshape\color{Green4},
 \subsection{Circle and Polygon intersection}
 \lstinputlisting{geometry/circle_tri.cpp}
 
-\subsection{Line Intersection}
-\lstinputlisting{geometry/line_inter.cpp}
+\subsection{Segment Intersection}
+\lstinputlisting{geometry/segment_intersection.cpp}
 
 \subsection{Line Intersection Point}
-\lstinputlisting{geometry/line_intersect.cpp}
+\lstinputlisting{geometry/line_intersection_points.cpp}
 
 \subsection{Rotating Calipers}
 \lstinputlisting{geometry/rotating_calipers.cpp}
 
 
-\section{Boook}
-
-\subsection{Block Tree}
-\lstinputlisting{boook/block_tree.cpp}
-
-\subsection{Dancing Link}
-\lstinputlisting{boook/DancingLinkX.cpp}
+\section{Ad hoc}
 
 \subsection{Joseph Problem}
-\lstinputlisting{boook/joseph_mlogn.cpp}
-
-\subsection{Middle Speed Linear Recursion}
-\lstinputlisting{boook/mid_speed_linear_recursion.cpp}
+\lstinputlisting{adhoc/joseph_mlogn.cpp}
 
 \subsection{Segment Max Segment Sum}
-\lstinputlisting{boook/NOI_Problem.cpp}
-
-\subsection{Chinese Remainder Theorem}
-\lstinputlisting{boook/same_remainder.cpp}
+\lstinputlisting{data_structure/segment_max_segment_sum.cpp}
 
 \subsection{Stone Merge}
-\lstinputlisting{boook/stone_merge.cpp}
-
-\subsection{Range Modify and Query BIT}
-\lstinputlisting{boook/two_demical_bit_matrix.cpp}
+\lstinputlisting{adhoc/stone_merge.cpp}
 
 \subsection{Manhattan Spanning Tree}
-\lstinputlisting{boook/Mahaton_Spanning_Tree.cpp}
+\lstinputlisting{adhoc/Mahaton_Spanning_Tree.cpp}
 
 \subsection{K Cover Tree}
-\lstinputlisting{boook/KCoverTree.cpp}
+\lstinputlisting{adhoc/KCoverTree.cpp}
 
 \subsection{M Segments' Maximum Sum}
-\lstinputlisting{boook/MaximumMSum.cpp}
+\lstinputlisting{adhoc/MaximumMSum.cpp}
 
 %\subsection{Sigma Problem}
 %\lstinputlisting{boook/sigma.cpp}
 
 %\subsection{Range Color Online}
-%\lstinputlisting{boook/yp_rangecolor.cpp}
+%\lstinputlisting{adhoc/yp_rangecolor.cpp}
 
 \subsection{Minimum Enclosing Cycle}
-\lstinputlisting{boook/minimum_enclosing_cycle.cpp}
+\lstinputlisting{adhoc/minimum_enclosing_cycle.cpp}
 
 \subsection{Rotating Sweep Line}
-\lstinputlisting{boook/Rotating_Sweep_Line.cpp}
+\lstinputlisting{adhoc/Rotating_Sweep_Line.cpp}
 
-%\subsection{Hilbert Curve}
-%\lstinputlisting{boook/hilbert.cpp}
+\subsection{Hilbert Curve}
+\lstinputlisting{adhoc/hilbert_curve.cpp}
 
 \end{document}
