--- a/codebook/codebook.tex
+++ b/codebook/codebook.tex
@@ -182,7 +182,7 @@ stringstyle=\itshape\color{Green4},
 \lstinputlisting{data_structure/DancingLinkX.cpp}
 
 \subsection{Range Modify and Query BIT}
-\lstinputlisting{adhoc/2d_bit.cpp}
+\lstinputlisting{data_structure/2d_bit.cpp}
 
 \section{Flow}
 \subsection{ISAP with bound}
@@ -372,7 +372,7 @@ stringstyle=\itshape\color{Green4},
 \lstinputlisting{adhoc/joseph_mlogn.cpp}
 
 \subsection{Segment Max Segment Sum}
-\lstinputlisting{data_structure/segment_max_segment_sum.cpp}
+\lstinputlisting{adhoc/segment_max_segment_sum.cpp}
 
 \subsection{Stone Merge}
 \lstinputlisting{adhoc/stone_merge.cpp}
