--- a/codebook/codebook.tex
+++ b/codebook/codebook.tex
@@ -94,7 +94,7 @@ stringstyle=\itshape\color{Green4},
 \pagestyle{fancy}
 \fancyfoot{}
 %\fancyfoot[R]{\includegraphics[width=20pt]{ironwood.jpg}}
-\fancyhead[L]{National Taiwan University LohneYB}
+\fancyhead[L]{National Taiwan University LYB}
 \fancyhead[R]{\thepage}
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\contentsname}{Contents}
@@ -175,8 +175,8 @@ stringstyle=\itshape\color{Green4},
 \subsection{Li Chao Tree}
 \lstinputlisting{data_structure/lichao.cpp}
 
-\subsection{Block Tree}
-\lstinputlisting{data_structure/block_tree.cpp}
+%\subsection{Block Tree}
+%\lstinputlisting{data_structure/block_tree.cpp}
 
 \subsection{Dancing Link}
 \lstinputlisting{data_structure/DancingLinkX.cpp}
@@ -213,6 +213,9 @@ stringstyle=\itshape\color{Green4},
 
 \subsection{Heavy-Light Decomposition}
 \lstinputlisting{tree/Heavy_Light_Decomposition.cpp}
+
+\subsection{Block tree}
+\lstinputlisting{tree/sqrt_tree.cpp}
 
 \section{Graph}
 \subsection{Biconnected Component}
@@ -306,8 +309,8 @@ stringstyle=\itshape\color{Green4},
 \subsection{Subset Convolution}
 \lstinputlisting{convolution/subset_convolution.cpp}
 
-%\subsection{FWT XOR with ternary}
-%\lstinputlisting{math/MDSWIN_2.cpp}
+\subsection{Ternary Xor}
+\lstinputlisting{convolution/ternary_xor.cpp}
 
 
 
