--- a/codebook/codebook.tex
+++ b/codebook/codebook.tex
@@ -123,7 +123,7 @@ stringstyle=\itshape\color{Green4},
 \subsection{Pragma}
 \lstinputlisting{basic/pragma.cpp}
 
-\subsection{Random Int}
+\subsection{Random Number}
 \lstinputlisting{basic/rand_number.cpp}
 
 \subsection{Increase Stack Size}
@@ -298,7 +298,7 @@ stringstyle=\itshape\color{Green4},
 \section{Convolution}
 
 \subsection{FFT}
-\lstinputlisting{convolution/fft.cpp}
+\lstinputlisting{convolution/FFT.cpp}
 
 \subsection{NTT}
 \lstinputlisting{convolution/NTT.cpp}
@@ -326,7 +326,7 @@ stringstyle=\itshape\color{Green4},
 \lstinputlisting{string/longest_palindrome.cpp}
 
 \subsection{Aho–Corasick Algorithm}
-\lstinputlisting{string/AC_Automata.cpp}
+\lstinputlisting{string/ac_automata.cpp}
 
 \subsection{Suffix Array}
 \lstinputlisting{string/suffix_array.cpp}
@@ -399,7 +399,7 @@ stringstyle=\itshape\color{Green4},
 \lstinputlisting{adhoc/minimum_enclosing_cycle.cpp}
 
 \subsection{Rotating Sweep Line}
-\lstinputlisting{adhoc/Rotating_Sweep_Line.cpp}
+\lstinputlisting{adhoc/rotating_sweep_line.cpp}
 
 \subsection{Hilbert Curve}
 \lstinputlisting{adhoc/hilbert_curve.cpp}
