--- a/codebook/codebook.tex
+++ b/codebook/codebook.tex
@@ -247,9 +247,6 @@ stringstyle=\itshape\color{Green4},
 \subsection{Extended Euclidean}
 \lstinputlisting{math/Extended_Euclidean.cpp}
 
-\subsection{Big Integer}
-\lstinputlisting{math/bigint.cpp}
-
 \subsection{Gaussian Elimination}
 \lstinputlisting{math/gauss.cpp}
 
@@ -403,5 +400,8 @@ stringstyle=\itshape\color{Green4},
 
 \subsection{Hilbert Curve}
 \lstinputlisting{adhoc/hilbert_curve.cpp}
+
+\subsection{Big Integer}
+\lstinputlisting{adhoc/bigint.cpp}
 
 \end{document}
