--- a/codebook/codebook.tex
+++ b/codebook/codebook.tex
@@ -15,7 +15,7 @@
 \usepackage{enumerate}
 \usepackage{titlesec}
 \usepackage{amsmath}
-\usepackage{eso-pic}
+%\usepackage{eso-pic}
 \usepackage[CheckSingle, CJKmath]{xeCJK}
 % \usepackage{CJKulem}
 
@@ -50,14 +50,14 @@
 \XeTeXlinebreakskip = 0pt plus 1pt				%設定段落之間的距離
 \setcounter{secnumdepth}{3}						%目錄顯示第三層
 
-\usepackage{tocloft}
+%\usepackage{tocloft}
 %\renewcommand*{\cftsecdotsep}{4.5}  % use dots in the section entries
 %\renewcommand*{\cftsecnumwidth}{3em} % increase space for Roman numerals
 %\renewcommand*{\cftsubsubsecindent}{2em} % reduce indent of subsubsection titles 
 
-\newcommand\MyAtPageCenter[1]{\AtPageUpperLeft{%
-\put(\LenToUnit{.14\paperwidth},\LenToUnit{-0.75\paperheight}){#1}}%
-}
+%\newcommand\MyAtPageCenter[1]{\AtPageUpperLeft{%
+%\put(\LenToUnit{.14\paperwidth},\LenToUnit{-0.75\paperheight}){#1}}%
+%} 
 %\AddToShipoutPictureBG{\MyAtPageCenter{\includegraphics[scale=0.7]{pusheen.png}}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -94,13 +94,14 @@ stringstyle=\itshape\color{Green4},
 \pagestyle{fancy}
 \fancyfoot{}
 %\fancyfoot[R]{\includegraphics[width=20pt]{ironwood.jpg}}
-\fancyhead[L]{National Taiwan University LYB}
+\fancyhead[L]{National Taiwan University LYB3}
 \fancyhead[R]{\thepage}
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\contentsname}{Contents}
 
 
 \scriptsize
+
 \tableofcontents
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
