--- a/codebook/codebook.tex
+++ b/codebook/codebook.tex
@@ -94,7 +94,7 @@ stringstyle=\itshape\color{Green4},
 \pagestyle{fancy}
 \fancyfoot{}
 %\fancyfoot[R]{\includegraphics[width=20pt]{ironwood.jpg}}
-\fancyhead[L]{National Taiwan University ABCodeboook}
+\fancyhead[L]{National Taiwan University LYB}
 \fancyhead[R]{\thepage}
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\contentsname}{Contents}
