--- a/codebook/codebook.tex
+++ b/codebook/codebook.tex
@@ -366,7 +366,7 @@ stringstyle=\itshape\color{Green4},
 \section{Theorem and Formula}
 \input{theorem_and_formula/theorem.tex}
 
-\section{Miscellaneous}
+\section{Miscellanea}
 
 \subsection{Joseph Problem}
 \lstinputlisting{adhoc/joseph_mlogn.cpp}
