--- a/codebook/codebook.tex
+++ b/codebook/codebook.tex
@@ -219,6 +219,7 @@ stringstyle=\itshape\color{Green4},
 \section{Graph}
 \subsection{Biconnected Component}
 \lstinputlisting{graph/Biconnected_component.cpp}
+% testing on TIOJ 1684
 
 \subsection{General Graph Macthing}
 \lstinputlisting{graph/general_graph_matching.cpp}
