finalize icpc2021 taipei regional codebook

--- a/codebook/codebook.tex
+++ b/codebook/codebook.tex
@@ -402,4 +402,10 @@ stringstyle=\itshape\color{Green4},
 \subsection{SMAWK}
 \lstinputlisting{adhoc/smawk.cpp}
 
+\subsection{Fractions, Decimal}
+\lstinputlisting{adhoc/fraction_and_decimal.py}
+
+\subsection{dinic part}
+\lstinputlisting{adhoc/dinic.cpp}
+
 \end{document}
